--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aurowallet/mina-provider": "^0.2.1",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "drand-client": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "tlock-js": "^0.6.1"
   },
   "devDependencies": {
