--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@aurowallet/mina-provider": "^0.2.1",
+    "@types/node": "^20.4.4",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "drand-client": "^1.2.1",
+    "paillier-bigint": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
@@ -26,6 +28,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
+    "isomorphic-fetch": "^3.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
