--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "snarkyjs": "^0.12.1",
     "tlock-js": "^0.6.1"
   },
   "devDependencies": {
@@ -28,9 +29,9 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
-    "isomorphic-fetch": "^3.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "isomorphic-fetch": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
